# Basics_motion

./: CMakeLists.txt  CMakeLists.txt.save  README.md
src/: serialTest  serialTest.cpp  serialTest.cpp.save  serialTest.cpp~
src/serialcom-prefix/src/serialcom-stamp/: serialcom-gitinfo.txt
src/serialcom-prefix/tmp/: serialcom-cfgcmd.txt  serialcom-gitclone.cmake
